Fixed moment selection issue due to z-index

--- a/less/rooms.less
+++ b/less/rooms.less
@@ -22,6 +22,20 @@
 		.color-rgba(@blue-1-raw, 0.2);
 		background-color: @rgba;
 
+		.room-data::after {
+
+			// .color-rgba(@blue-1-raw, 0.2);
+			// @from: @rgba0;
+			// @to: @rgba;
+
+			// background: linear-gradient(to right, @from 0%, @to 100%);
+
+			// background: linear-gradient(to right, rgba(21,27,40,0) 0%,rgba(21,27,40,1) 100%);
+
+			-webkit-filter: brightness(1.2);
+
+		}
+
 	}
 
 }
@@ -51,6 +65,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	position: relative;
+	width: 100%;
 
 	max-width: ~"calc(100% - @{room-icon-width})";
 
@@ -69,22 +84,18 @@
 		height: 100%;
 		width: 100px;
 
+		pointer-events: none;
+
 		// .color-rgba always returns the requested value as @rgba, but also a @rgba0 and @rgba1 at 0 and 1 opacity respectively
 		.color-rgba(@blue-0-raw, 0);
 		@from: @rgba0;
 		@to: @rgba1;
 
-		background-color: @rgba;
-		// box-shadow: inset -10px 0 10px @blue-0;
 		background: linear-gradient(to right, @from 0%, @to 100%);
 
-		&:hover {
+		transition: all 0.2s ease;
 
-			background: linear-gradient(to right, rgba(21,27,40,0) 0%,rgba(21,27,40,1) 100%);
-
-		}
 	}
-
 
 }
 
@@ -106,8 +117,6 @@
 
 		padding: 5px 15px;
 		margin: 0 10px 10px 0;
-
-		z-index: -1;
 
 		background-color: @blue-1;
 
